--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
     "description": "",
     "type": "commonjs",
     "devDependencies": {
-       "@types/cors": "^2.8.13",
-       "@types/express": "^4.17.15",
-       "@types/node": "^16.11.10",
-       "ts-node": "10.7.0",
-       "ts-node-dev": "^2.0.0",
-       "typescript": "4.5.2"
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.15",
+        "@types/node": "^16.11.10",
+        "ts-node": "10.7.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "4.5.2"
     },
     "dependencies": {
-       "cors": "^2.8.5",
-       "express": "^4.18.2",
-       "express-async-errors": "^3.1.1",
-       "pg": "^8.13.1",
-       "reflect-metadata": "^0.1.13",
-       "typeorm": "0.3.11"
+        "@types/jsonwebtoken": "^9.0.8",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^9.0.2",
+        "pg": "^8.13.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "0.3.11"
     },
     "scripts": {
-       "migrations:run": "npx typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:run",
-       "build": "tsc",
-       "dev:server": "ts-node-dev src/server.ts",
-       "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+        "migrations:run": "npx typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:run",
+        "build": "tsc",
+        "dev:server": "ts-node-dev src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     }
- }
- 
+}
